feat: create splash and categories component

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.0.5
   flutter_bloc: ^8.1.1
   flutter_svg: ^1.1.6
+  flutter_svg_provider: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -68,7 +69,6 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
-    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
