--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   flutter_svg: ^1.1.6
   flutter_svg_provider: ^1.0.3
+  badges: ^3.0.2
 
 dev_dependencies:
   flutter_test:
